--- a/MotoConnect/src/main/java/com/mycompany/motoconnect/Tela_Informacoes_Entregador.form
+++ b/MotoConnect/src/main/java/com/mycompany/motoconnect/Tela_Informacoes_Entregador.form
@@ -153,7 +153,7 @@
                                           <Component id="JTFcidade5" min="-2" pref="143" max="-2" attributes="0"/>
                                           <Component id="JTFsenha5" min="-2" pref="145" max="-2" attributes="0"/>
                                           <Component id="JLBnumero5" min="-2" max="-2" attributes="0"/>
-                                          <Component id="JTFnumero5" min="-2" pref="145" max="-2" attributes="0"/>
+                                          <Component id="JTFtelefone5" min="-2" pref="145" max="-2" attributes="0"/>
                                           <Component id="JLBsenha5" alignment="0" min="-2" max="-2" attributes="0"/>
                                           <Component id="JLBcidade5" min="-2" max="-2" attributes="0"/>
                                       </Group>
@@ -227,7 +227,7 @@
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="JTFbairro5" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="JTFrua5" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="JTFnumero5" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="JTFtelefone5" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
@@ -313,7 +313,7 @@
                 </Property>
               </Properties>
             </Component>
-            <Component class="javax.swing.JTextField" name="JTFnumero5">
+            <Component class="javax.swing.JTextField" name="JTFtelefone5">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="cc" green="cc" red="cc" type="rgb"/>
@@ -381,7 +381,7 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Numero:"/>
+                <Property name="text" type="java.lang.String" value="Telefone:"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="JLBrua5">
